<resources>
    <string name="app_name">WorkInfo</string>
    <string name="bnv_mine">我的</string>
    <string name="bnv_message">消息</string>
    <string name="bnv_stat">统计</string>
    <string name="bnv_index">首页</string>
    <string name="mine">我的</string>
    <string name="title_change_psd">修改密码</string>
    <string name="change_psd_tips">请修改一个你喜欢的密码吧~</string>
    <string name="hint_old_psd">请输入旧密码</string>
    <string name="hint_new_psd">请输入新密码</string>
    <string name="hint_sure_psd">请再次确认密码</string>
    <string name="sure">确认</string>
    <string name="stat_title">数据统计</string>
    <string name="stat_hint">注:所有记录为已审批通过和实际发生的。</string>
</resources>
