<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="oldPsd"
            type="String" />

        <variable
            name="newPsd"
            type="String" />

        <variable
            name="surePsd"
            type="String" />

        <variable
            name="clickEvent"
            type="com.working.activity.ChangePsdActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="29dp"
            android:text="@string/title_change_psd"
            android:textColor="@color/text_black_color"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/textView44"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/change_psd_tips"
            android:textColor="@color/text_color_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="parent" />


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/loginInfo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/info_icon"
                android:layout_marginTop="32dp"
                android:background="@null"
                android:hint="@string/hint_old_psd"
                android:text="@={oldPsd}"
                android:textColorHint="@color/gary_text_color"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/info_icon"
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/password_icon"
                android:layout_alignBottom="@+id/loginInfo"
                android:layout_alignTop="@+id/loginInfo"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/loginInfo"
                android:background="@color/divder_line_color"
                android:layout_alignLeft="@+id/info_icon"
                android:layout_alignRight="@+id/loginInfo"/>

            <EditText
                android:id="@+id/new_psd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_below="@+id/loginInfo"
                android:layout_marginRight="20dp"
                android:layout_marginTop="24dp"
                android:layout_toRightOf="@+id/info_icon"
                android:background="@null"
                android:hint="@string/hint_new_psd"

                android:inputType="textPassword"
                android:text="@={newPsd}"
                android:textColorHint="@color/gary_text_color"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/password_icon"
                android:layout_alignBottom="@+id/new_psd"
                android:layout_alignTop="@+id/new_psd"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/new_psd"
                android:background="@color/divder_line_color"
                android:layout_alignLeft="@+id/info_icon"
                android:layout_alignRight="@+id/loginInfo"/>

            <EditText
                android:id="@+id/new_psd_sure"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:inputType="textPassword"
                android:layout_marginLeft="12dp"
                android:layout_below="@+id/new_psd"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/info_icon"
                android:background="@null"
                android:hint="@string/hint_sure_psd"
                android:text="@={surePsd}"
                android:textColorHint="@color/gary_text_color"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/password_icon"
                android:layout_alignBottom="@+id/new_psd_sure"
                android:layout_alignTop="@+id/new_psd_sure"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/new_psd_sure"
                android:background="@color/divder_line_color"
                android:layout_alignLeft="@+id/info_icon"
                android:layout_alignRight="@+id/loginInfo"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:textColor="@color/white"
                android:layout_below="@+id/new_psd_sure"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="54dp"
                android:background="@drawable/btn_bg"
                android:onClick="@{()->clickEvent.submit(oldPsd, newPsd,surePsd)}"
                android:text="@string/sure"
                android:textSize="16sp" />
        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>